# export-lc0

./: .gitignore  README.md  pyproject.toml  requirements.txt
.dvc/: config
tf/: .gitignore  export.ipynb  export.py  inference.ipynb  inspect.ipynb  models.dvc  play.py  tfprocess.py  weights.dvc
tf/configs/: config.yaml.dvc
