[tool.poetry]
name = "export-lc0"
version = "0.1.0"
description = "Export the official lc0 model with tensorflow"
authors = ["Patrick Frank <patr.frank@gmx.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.13.3"
protobuf = "^3.12.1"
PyYAML = "^6.0"
torch = "^1.12.0"
tf2onnx = "^1.11.1"
onnx = "^1.12.0"
onnxruntime = "^1.11.1"
python-chess = "^1.999"
intel-tensorflow = "^2.5.1"
tensorflow-addons = "^0.17.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
pydot = "^1.4.2"
dvc = "^2.12.0"
jupyter = "^1.0.0"
notebook = "^6.4.12"


[build-system]
requires = ["poetry-core>=1.0.0", "oldest-supported-numpy"]
build-backend = "poetry.core.masonry.api"
